Fix some spacing issues

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,7 @@
+.ab {
+    height: auto;
+}
+
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
