--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,7 @@
+.con {
+    height: auto;
+}
+
 .container.contact__container {
     width: 58%;
     display: grid;
