--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,3 +1,7 @@
+.proj {
+    height: auto;
+}
+
 .portfolio__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
